--- a/libft/Makefile
+++ b/libft/Makefile
@@ -2,10 +2,18 @@
 CC = gcc
 CFLAGS = -Wall -Werror -Wextra
 NAME = libft.a
-SRCS = $(wildcard ft_*.c)
+SRCS = ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_memchr.c \
+    ft_memcmp.c ft_strlen.c ft_strdup.c ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
+    ft_isascii.c ft_isprint.c ft_toupper.c ft_tolower.c ft_calloc.c ft_substr.c \
+    ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_putchar_fd.c \
+    ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_striteri.c
 OBJS = $(SRCS:.c=.o)
 EXEC = libft
 MAIN = main.c
+BONUS_SRCS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c \
+             ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c \
+             ft_lstmap_bonus.c
+BONUS_OBJS = $(BONUS_SRCS:.c=.o)
 
 # Reglas
 all: $(NAME)
@@ -17,11 +25,10 @@ $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(EXEC): $(NAME) $(MAIN)
-<<<<<<< HEAD
 	$(CC) $(CFLAGS) $(MAIN) -L. -lft -o $(EXEC)
-=======
-	$(CC) $(CFLAGS) $(MAIN) -L. -lft -lbsd -o $(EXEC)
->>>>>>> origin/main
+
+bonus: $(OBJS) $(BONUS_OBJS)
+	ar rcs $(NAME) $(OBJS) $(BONUS_OBJS)
 
 run: $(EXEC)
 	./$(EXEC)
