--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,15 +1,13 @@
 # Variables
-CC = gcc
+CC = cc
 CFLAGS = -Wall -Werror -Wextra
 NAME = libft.a
 SRCS = ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_memchr.c \
-    ft_memcmp.c ft_strlen.c ft_strdup.c ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
+	ft_memcmp.c ft_strlen.c ft_strdup.c ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
     ft_isascii.c ft_isprint.c ft_toupper.c ft_tolower.c ft_calloc.c ft_substr.c \
     ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_putchar_fd.c \
-    ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_striteri.c
+    ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_striteri.c ft_strlcpy.c
 OBJS = $(SRCS:.c=.o)
-EXEC = libft
-MAIN = main.c
 BONUS_SRCS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c \
              ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c \
              ft_lstmap_bonus.c
@@ -21,22 +19,21 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	ar rcs $(NAME) $(OBJS)
 
-%.o: %.c libft.h
-	$(CC) $(CFLAGS) -c $< -o $@
-
-$(EXEC): $(NAME) $(MAIN)
-	$(CC) $(CFLAGS) $(MAIN) -L. -lft -o $(EXEC)
-
 bonus: $(OBJS) $(BONUS_OBJS)
 	ar rcs $(NAME) $(OBJS) $(BONUS_OBJS)
 
-run: $(EXEC)
-	./$(EXEC)
+%.o: %.c libft.h
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	rm -f $(OBJS) $(BONUS_OBJS)
 
 fclean: clean
-	rm -f $(NAME) $(EXEC)
+	rm -f $(NAME)
 
 re: fclean all
+
+# Regla para compilar y ejecutar el programa de prueba
+run: bonus main.c
+	$(CC) $(CFLAGS) main.c -L. -lft -o test_program
+	./test_program
