--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,39 +1,95 @@
-# Variables
-CC = cc
-CFLAGS = -Wall -Werror -Wextra
-NAME = libft.a
-SRCS = ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_memchr.c \
-	ft_memcmp.c ft_strlen.c ft_strdup.c ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
-    ft_isascii.c ft_isprint.c ft_toupper.c ft_tolower.c ft_calloc.c ft_substr.c \
-    ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_putchar_fd.c \
-    ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_striteri.c ft_strlcpy.c
-OBJS = $(SRCS:.c=.o)
-BONUS_SRCS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c \
-             ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c \
-             ft_lstmap_bonus.c
-BONUS_OBJS = $(BONUS_SRCS:.c=.o)
+NAME		= libft.a
 
-# Reglas
-all: $(NAME)
+SRCS_MAND	=	ft_memset.c		\
+		  		ft_memmove.c	\
+		  		ft_memchr.c		\
+		  		ft_memcmp.c		\
+		  		ft_memcpy.c		\
+		  		ft_bzero.c		\
+		  		ft_atoi.c		\
+		  		ft_strlen.c		\
+		  		ft_strlcpy.c	\
+		  		ft_strlcat.c	\
+		 	 	ft_strchr.c		\
+		 		ft_strrchr.c	\
+		  		ft_strnstr.c	\
+				ft_strncmp.c	\
+		  		ft_atoi.c		\
+		  		ft_isalnum.c	\
+		  		ft_isdigit.c	\
+		  		ft_isalpha.c	\
+		  		ft_isascii.c	\
+		 		ft_isprint.c	\
+		  		ft_tolower.c	\
+		  		ft_toupper.c	\
+		  		ft_calloc.c		\
+		  		ft_strdup.c		\
+				ft_itoa.c		\
+				ft_substr.c		\
+				ft_strjoin.c	\
+				ft_strtrim.c	\
+				ft_split.c		\
+				ft_strmapi.c	\
+				ft_striteri.c	\
+				ft_putchar_fd.c	\
+				ft_putstr_fd.c	\
+				ft_putendl_fd.c	\
+				ft_putnbr_fd.c	\
 
-$(NAME): $(OBJS)
-	ar rcs $(NAME) $(OBJS)
+SRCS_BON	=	ft_lstnew_bonus.c		\
+		  		ft_lstadd_front_bonus.c	\
+		  		ft_lstsize_bonus.c		\
+		  		ft_lstlast_bonus.c		\
+				ft_lstadd_back_bonus.c	\
+				ft_lstdelone_bonus.c	\
+				ft_lstclear_bonus.c		\
+				ft_lstiter_bonus.c		\
+				ft_lstmap_bonus.c
 
-bonus: $(OBJS) $(BONUS_OBJS)
-	ar rcs $(NAME) $(OBJS) $(BONUS_OBJS)
+OBJS_MAND	= ${SRCS_MAND:.c=.o}
 
-%.o: %.c libft.h
-	$(CC) $(CFLAGS) -c $< -o $@
+OBJS_BON	= ${SRCS_BON:.c=.o}
 
-clean:
-	rm -f $(OBJS) $(BONUS_OBJS)
+CC		= cc
 
-fclean: clean
-	rm -f $(NAME)
+RM		= rm -rf
 
-re: fclean all
+AR		= ar rcs
 
-# Regla para compilar y ejecutar el programa de prueba
-run: bonus main.c
-	$(CC) $(CFLAGS) main.c -L. -lft -o test_program
-	./test_program
+RANLIB		= ranlib
+
+CFLAGS += -Wall -Werror -Wextra -g
+
+LFLAGS += -I.
+
+all	:	$(NAME)
+		@echo Compiling Library "libft.a" File "Only Mandatory Part": $@ ...
+
+$(NAME)	:	$(OBJS_MAND)
+		@echo Compiling Library File: $@ ...
+		$(AR) $(NAME) $(OBJS_MAND)
+		$(RANLIB) $(NAME)
+
+%.o:	%.c
+		@echo Compiling Binary Files: $@ ...
+		$(CC) $(CFLAGS) -c $< -o $@ $(LFLAGS)
+
+bonus	:	$(OBJS_MAND) $(OBJS_BON) libft.h
+		$(AR) $(NAME) $(OBJS_BON) $(OBJS_MAND)
+		@echo Compiling Library "libft.a" File "Mandatory + Bonus Part": $@ ...
+
+clean	:	
+		@echo Cleaning The .o Generated Files: $@ ...
+		$(RM) ${OBJS_MAND} ${OBJS_BON}
+
+
+fclean	:	clean
+		@echo Cleaning All ".o & libft.a" Generated Files:
+		$(RM) $(NAME)
+
+re	:	fclean all
+		@echo Cleaning All ".o & libft.a" Generated Files And Remake Everything:
+
+
+.PHONY:		all clean fclean re bonus
+
