--- a/libft/Makefile
+++ b/libft/Makefile
@@ -36,19 +36,19 @@ SRCS_MAND	=	ft_memset.c		\
 				ft_putendl_fd.c	\
 				ft_putnbr_fd.c	\
 
-SRCS_BON	=	ft_lstnew_bonus.c		\
-		  		ft_lstadd_front_bonus.c	\
-		  		ft_lstsize_bonus.c		\
-		  		ft_lstlast_bonus.c		\
-				ft_lstadd_back_bonus.c	\
-				ft_lstdelone_bonus.c	\
-				ft_lstclear_bonus.c		\
-				ft_lstiter_bonus.c		\
-				ft_lstmap_bonus.c
+SRCS_BONUS	=	ft_lstnew.c		\
+		  		ft_lstadd_front.c	\
+		  		ft_lstsize.c		\
+		  		ft_lstlast.c		\
+				ft_lstadd_back.c	\
+				ft_lstdelone.c	\
+				ft_lstclear.c		\
+				ft_lstiter.c		\
+				ft_lstmap.c
 
 OBJS_MAND	= ${SRCS_MAND:.c=.o}
 
-OBJS_BON	= ${SRCS_BON:.c=.o}
+OBJS_BON	= ${SRCS_BONUS:.c=.o}
 
 CC		= cc
 
