--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,95 +1,85 @@
-NAME		= libft.a
+NAME = libft.a
 
-SRCS_MAND	=	ft_memset.c		\
-		  		ft_memmove.c	\
-		  		ft_memchr.c		\
-		  		ft_memcmp.c		\
-		  		ft_memcpy.c		\
-		  		ft_bzero.c		\
-		  		ft_atoi.c		\
-		  		ft_strlen.c		\
-		  		ft_strlcpy.c	\
-		  		ft_strlcat.c	\
-		 	 	ft_strchr.c		\
-		 		ft_strrchr.c	\
-		  		ft_strnstr.c	\
-				ft_strncmp.c	\
-		  		ft_atoi.c		\
-		  		ft_isalnum.c	\
-		  		ft_isdigit.c	\
-		  		ft_isalpha.c	\
-		  		ft_isascii.c	\
-		 		ft_isprint.c	\
-		  		ft_tolower.c	\
-		  		ft_toupper.c	\
-		  		ft_calloc.c		\
-		  		ft_strdup.c		\
-				ft_itoa.c		\
-				ft_substr.c		\
-				ft_strjoin.c	\
-				ft_strtrim.c	\
-				ft_split.c		\
-				ft_strmapi.c	\
-				ft_striteri.c	\
-				ft_putchar_fd.c	\
-				ft_putstr_fd.c	\
-				ft_putendl_fd.c	\
-				ft_putnbr_fd.c	\
+SRCS = ft_isalpha.c \
+	ft_isdigit.c \
+	ft_isalnum.c \
+	ft_isascii.c \
+	ft_isprint.c \
+	ft_strlen.c \
+	ft_memset.c \
+	ft_bzero.c \
+	ft_memcpy.c \
+	ft_memmove.c \
+	ft_strlcpy.c \
+	ft_strlcat.c \
+	ft_toupper.c \
+	ft_tolower.c \
+	ft_strchr.c \
+	ft_strrchr.c \
+	ft_strncmp.c \
+	ft_memchr.c \
+	ft_memcmp.c \
+	ft_strnstr.c \
+	ft_atoi.c \
+	ft_calloc.c \
+	ft_strdup.c \
+	ft_substr.c \
+	ft_strjoin.c \
+	ft_strtrim.c \
+	ft_split.c \
+	ft_itoa.c \
+	ft_strmapi.c \
+	ft_striteri.c \
+	ft_putchar_fd.c \
+	ft_putstr_fd.c \
+	ft_putendl_fd.c \
+	ft_putnbr_fd.c \
+	# main.c \
 
-SRCS_BONUS	=	ft_lstnew.c		\
-		  		ft_lstadd_front.c	\
-		  		ft_lstsize.c		\
-		  		ft_lstlast.c		\
-				ft_lstadd_back.c	\
-				ft_lstdelone.c	\
-				ft_lstclear.c		\
-				ft_lstiter.c		\
-				ft_lstmap.c
+OBJS = $(SRCS:.c=.o)
+BONUS_FILES = ft_lstnew_bonus.c \
+	ft_lstadd_front_bonus.c \
+	ft_lstsize_bonus.c \
+	ft_lstlast_bonus.c \
+	ft_lstadd_back_bonus.c \
+	ft_lstdelone_bonus.c \
+	ft_lstclear_bonus.c \
+	ft_lstiter_bonus.c \
+	ft_lstmap_bonus.c \
 
-OBJS_MAND	= ${SRCS_MAND:.c=.o}
+BONUS_OBJS = $(BONUS_FILES:.c=.o)
 
-OBJS_BON	= ${SRCS_BONUS:.c=.o}
+HEADERS = libft.h
 
-CC		= cc
+CC = cc
 
-RM		= rm -rf
+CFLAGS = -Wall -Wextra -Werror
 
-AR		= ar rcs
+AR = ar rcs
 
-RANLIB		= ranlib
+all: $(NAME)
 
-CFLAGS += -Wall -Werror -Wextra -g
+$(NAME): $(OBJS)
+	$(AR) $(NAME) $(OBJS)
 
-LFLAGS += -I.
+# $(NAME): $(OBJS)
+# 	$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
 
-all	:	$(NAME)
-		@echo Compiling Library "libft.a" File "Only Mandatory Part": $@ ...
+%.o: %.c $(HEADERS)
+	$(CC) $(CFLAGS) -c $< -o $@
 
-$(NAME)	:	$(OBJS_MAND)
-		@echo Compiling Library File: $@ ...
-		$(AR) $(NAME) $(OBJS_MAND)
-		$(RANLIB) $(NAME)
+bonus: $(NAME) $(BONUS_OBJS)
+	$(AR) $(NAME) $(BONUS_OBJS)
 
-%.o:	%.c
-		@echo Compiling Binary Files: $@ ...
-		$(CC) $(CFLAGS) -c $< -o $@ $(LFLAGS)
+clean:
+	rm -f $(OBJS)
 
-bonus	:	$(OBJS_MAND) $(OBJS_BON) libft.h
-		$(AR) $(NAME) $(OBJS_BON) $(OBJS_MAND)
-		@echo Compiling Library "libft.a" File "Mandatory + Bonus Part": $@ ...
+fclean: clean
+	rm -f $(NAME)
 
-clean	:	
-		@echo Cleaning The .o Generated Files: $@ ...
-		$(RM) ${OBJS_MAND} ${OBJS_BON}
+re: fclean all
 
+run: $(NAME)
+	./$(NAME)
 
-fclean	:	clean
-		@echo Cleaning All ".o & libft.a" Generated Files:
-		$(RM) $(NAME)
-
-re	:	fclean all
-		@echo Cleaning All ".o & libft.a" Generated Files And Remake Everything:
-
-
-.PHONY:		all clean fclean re bonus
-
+.PHONY: all clean fclean re run bonus
