--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,6 +1,12 @@
 NAME = libftprintf.a
 
-SRCS = ft_printf.c
+SRCS = ft_printf.c \
+	ft_putchar.c \
+	ft_putstr.c \
+	ft_putnbr.c \
+	ft_putunbr.c \
+	ft_puthex.c \
+	ft_putptr.c \
 
 OBJS = $(SRCS:.c=.o)
 
