--- a/get_next_line/Makefile
+++ b/get_next_line/Makefile
@@ -1,14 +1,11 @@
-NAME = libftprintf.a
+NAME = getnextline.a
 
-SRCS = ft_printf.c \
-	ft_putchar.c \
-	ft_putstr.c \
-	ft_putnbr.c \
-	ft_putunbr.c \
-	ft_puthex.c \
-	ft_putptr.c \
+SRCS = get_next_line.c \
+	get_next_line_utils.c
 
 OBJS = $(SRCS:.c=.o)
+
+HEADERS = get_next_line.h
 
 CC = cc
 
@@ -17,11 +14,10 @@ CFLAGS = -Wall -Wextra -Werror
 AR = ar rcs
 
 all: $(NAME)
-
 $(NAME): $(OBJS)
 	$(AR) $(NAME) $(OBJS)
 
-%.o: %.c
+%.o: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
@@ -31,8 +27,5 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
-
-run: $(NAME)
-	./$(NAME)
 
 .PHONY: all clean fclean re run bonus
