--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -1,9 +1,12 @@
 NAME = pipex
+BONUS_NAME = pipex_bonus
 CC = gcc
 CFLAGS = -Wall -Werror -Wextra
 
-SRCS = pipex.c utils.c
+SRCS = ./src/pipex.c ./src/utils.c
+BONUS_SRCS = ./bonus/pipex_bonus.c ./bonus/utils_bonus.c
 OBJS = $(SRCS:.c=.o)
+BONUS_OBJS = $(BONUS_SRCS:.c=.o)
 
 LIBFT_DIR = ./libft
 LIBFT = $(LIBFT_DIR)/libft.a
@@ -16,14 +19,24 @@ $(LIBFT):
 $(NAME): $(OBJS) $(LIBFT)
 	$(CC) $(CFLAGS) $(OBJS) $(LIBFT) -o $(NAME)
 
+$(BONUS_NAME): $(BONUS_OBJS) $(LIBFT)
+	$(CC) $(CFLAGS) $(BONUS_OBJS) $(LIBFT) -o $(BONUS_NAME)
+
+%.o: %.c $(HEADERS)
+	$(CC) $(CFLAGS) -c $< -o $@
+
+bonus: $(BONUS_NAME)
+
 clean:
-	rm -f $(OBJS)
+	rm -f $(OBJS) $(BONUS_OBJS)
 	make -C $(LIBFT_DIR) clean
 
 fclean: clean
-	rm -f $(NAME)
+	rm -f $(NAME) $(BONUS_NAME)
 	make -C $(LIBFT_DIR) fclean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+
+.PHONY: all clean fclean re bonus
+.PHONY: all clean fclean re bonus
