--- a/ft_printfs/ft_printf_bonus/Makefile
+++ b/ft_printfs/ft_printf_bonus/Makefile
@@ -1,14 +1,6 @@
 NAME = libftprintf.a
 
 SRCS = ft_printf.c \
-	ft_putchar.c \
-	ft_putstr.c \
-	ft_putnbr.c \
-	ft_putunbr.c \
-	ft_puthex.c \
-	ft_putptr.c
-
-BONUS_SRCS = ft_printf_bonus.c \
 	handler_hex.c \
 	handler_nbr.c \
 	ft_putchar.c \
@@ -19,7 +11,6 @@ BONUS_SRCS = ft_printf_bonus.c \
 	ft_putptr.c
 
 OBJS = $(SRCS:.c=.o)
-BONUS_OBJS = $(BONUS_SRCS:.c=.o)
 
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
@@ -30,14 +21,13 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(AR) $(NAME) $(OBJS)
 
-bonus: $(BONUS_OBJS)
-	$(AR) $(NAME) $(BONUS_OBJS)
+bonus: all
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS) $(BONUS_OBJS)
+	rm -f $(OBJS)
 
 fclean: clean
 	rm -f $(NAME)
