--- a/push_swap/libs/get_next_line/Makefile
+++ b/push_swap/libs/get_next_line/Makefile
@@ -6,32 +6,24 @@
 #    By: agarcia <agarcia@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/26 02:55:48 by agarcia           #+#    #+#              #
-#    Updated: 2025/07/30 14:57:59 by agarcia          ###   ########.fr        #
+#    Updated: 2025/07/31 11:44:23 by agarcia          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = get_next_line.a
+NAME = libget_next_line.a
 
 SRCS = get_next_line.c
 
 OBJS = $(SRCS:.c=.o)
 
-HEADERS = get_next_line.h
-
-CC = cc
+CC = gcc
 
 CFLAGS = -Wall -Wextra -Werror
-
-AR = ar rcs
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(AR) $(NAME) $(OBJS)
-
-
-%.o: %.c $(HEADERS)
-	$(CC) $(CFLAGS) -c $< -o $@
+	ar rcs $(NAME) $(OBJS)
 
 clean:
 	rm -f $(OBJS)
