so_long terminado

--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -3,6 +3,7 @@ CC = gcc
 CFLAGS = -Wall -Werror -Wextra
 
 MANDATORY_DIR = src/
+OBJDIR = objs
 
 SRCS = $(MANDATORY_DIR)/pipex.c \
        $(MANDATORY_DIR)/exec/run_cmd.c \
@@ -14,26 +15,25 @@ SRCS = $(MANDATORY_DIR)/pipex.c \
        $(MANDATORY_DIR)/utils/my_getenv.c \
        $(MANDATORY_DIR)/utils/free.c
 
-OBJS = $(SRCS:.c=.o)
-
+OBJS = $(SRCS:%.c=$(OBJDIR)/%.o)
 
 LIBFT_DIR = libs/libft
 LIBFT = $(LIBFT_DIR)/libft.a
 
-
 all: $(LIBFT) $(NAME)
 
 $(LIBFT):
-	make -C $(LIBFT_DIR)
+	$(MAKE) -C $(LIBFT_DIR)
 
 $(NAME): $(OBJS) $(LIBFT)
 	$(CC) $(CFLAGS) $(OBJS) $(LIBFT) -o $(NAME)
 
-%.o: %.c $(MANDATORY_DIR)/pipex.h
+$(OBJDIR)/%.o: %.c $(MANDATORY_DIR)/pipex.h
+	mkdir -p $(OBJDIR)/$(dir $*)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	rm -rf $(OBJDIR)
 	make -C $(LIBFT_DIR) clean
 
 fclean: clean
