--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "*.dbclient-js": "javascript",
         "libft.h": "c",
-        "wait.h": "c"
+        "wait.h": "c",
+        "stdlib.h": "c",
+        "unistd.h": "c",
+        "__locale": "cpp",
+        "complex": "c"
     }
 }
