--- a/philosophers_2/philo/Makefile
+++ b/philosophers_2/philo/Makefile
@@ -2,25 +2,33 @@ NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -pthread
 
+SRC_DIR = src
+OBJ_DIR = objs
+
 SRCS = main.c \
 	   philo.c \
 	   utils.c \
 	   time_utils.c \
 	   check.c \
 	   monitor.c \
+	   mutex_utils.c \
+	   sync.c \
+	   init.c \
 
-OBJS = $(SRCS:.c=.o)
+SRC_FILES = $(addprefix $(SRC_DIR)/, $(SRCS))
+OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
-%.o: %.c
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
+	@mkdir -p $(OBJ_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	@rm -rf $(OBJS)
+	@rm -rf $(OBJ_DIR)
 
 fclean: clean
 	@rm -rf $(NAME)
