--- a/4/CPP/CPP1/ex00/Makefile
+++ b/4/CPP/CPP1/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: agarcia <agarcia@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/11/10 14:52:29 by agarcia           #+#    #+#              #
-#    Updated: 2025/11/10 14:52:30 by agarcia          ###   ########.fr        #
+#    Updated: 2025/12/31 10:47:58 by agarcia          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,20 +15,21 @@ NAME		:= Zombie
 CPP		:= c++
 CPPFLAGS	:= -Wall -Wextra -Werror -std=c++98
 
-SRCS		:= main.cpp \
-		   Zombie.cpp \
-		   newZombie.cpp \
-		   randomChump.cpp
+SRC_DIR		:= src
+SRCS		:= 	$(SRC_DIR)/main.cpp \
+		   		$(SRC_DIR)/Zombie.cpp \
+		   		$(SRC_DIR)/newZombie.cpp \
+		   		$(SRC_DIR)/randomChump.cpp
 OBJS_DIR	:= objs
-OBJS		:= $(SRCS:%.cpp=$(OBJS_DIR)/%.o)
+OBJS		:= $(SRCS:$(SRC_DIR)/%.cpp=$(OBJS_DIR)/%.o)
 
 all: $(NAME)
 
 $(OBJS_DIR):
 	@mkdir -p $(OBJS_DIR)
 
-$(OBJS_DIR)/%.o: %.cpp | $(OBJS_DIR)
-	$(CPP) $(CPPFLAGS) -c $< -o $@
+$(OBJS_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJS_DIR)
+	$(CPP) $(CPPFLAGS) -I includes -c $< -o $@
 
 $(NAME): $(OBJS)
 	$(CPP) $(CPPFLAGS) $(OBJS) -o $(NAME)
