arreglado carpetas de cpp1

--- a/5/CPP5/ex01/Makefile
+++ b/5/CPP5/ex01/Makefile
@@ -6,16 +6,17 @@
 #    By: agarcia <agarcia@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/11/10 14:53:15 by agarcia           #+#    #+#              #
-#    Updated: 2026/01/14 19:22:58 by agarcia          ###   ########.fr        #
+#    Updated: 2026/01/16 17:57:54 by agarcia          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		:= bureaucrat
+NAME		:= form
 
 CPP		:= c++
 CPPFLAGS	:= -Wall -Wextra -Werror -std=c++98
 
 SRCS		:= Bureaucrat.cpp \
+			   Form.cpp \
 			   main.cpp
 OBJS_DIR	:= objs
 OBJS		:= $(SRCS:%.cpp=$(OBJS_DIR)/%.o)
