--- a/5/CPP5/ex00/Makefile
+++ b/5/CPP5/ex00/Makefile
@@ -6,18 +6,21 @@
 #    By: agarcia <agarcia@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/11/10 14:53:15 by agarcia           #+#    #+#              #
-#    Updated: 2026/01/14 19:22:58 by agarcia          ###   ########.fr        #
+#    Updated: 2026/01/20 14:41:19 by agarcia          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		:= bureaucrat
 
 CPP		:= c++
-CPPFLAGS	:= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	:= -Wall -Wextra -Werror -std=c++98 -Iinclude
+
+SRC_DIR		:= src
+INC_DIR		:= include
+OBJS_DIR	:= objs
 
 SRCS		:= Bureaucrat.cpp \
 			   main.cpp
-OBJS_DIR	:= objs
 OBJS		:= $(SRCS:%.cpp=$(OBJS_DIR)/%.o)
 
 all: $(NAME)
@@ -25,7 +28,7 @@ all: $(NAME)
 $(OBJS_DIR):
 	@mkdir -p $(OBJS_DIR)
 
-$(OBJS_DIR)/%.o: %.cpp | $(OBJS_DIR)
+$(OBJS_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJS_DIR)
 	$(CPP) $(CPPFLAGS) -c $< -o $@
 
 $(NAME): $(OBJS)
