--- a/4/CPP4/ex03/Makefile
+++ b/4/CPP4/ex03/Makefile
@@ -1,7 +1,8 @@
 NAME	:= materia
 
 CPP	 := c++
-CPPFLAGS	:= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	:= -Wall -Wextra -Werror -std=c++98 -I includes
+
 
 SRCS	:=  src/main.cpp \
 			src/AMateria.cpp \
